add logs